--- a/front_todo/public/index.html
+++ b/front_todo/public/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Todo/Organizando sua vida</title>
+    <title>Todo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
